<resources>
    <string name="app_title">Room Mobile App</string>

    <!-- Form fragment -->
    <string name="form_fragment_string">Form fragment</string>
    <string name="button_apply_string">Apply</string>
    <string name="button_release_string">Release</string>
    <string name="rollb_label_string">Rollerblinds</string>
    <string name="switch_light_string">Lights ON/OFF</string>
    <string name="label_status_string">Status: </string>
    <!-- Loading fragment -->
    <string name="load_fragment_string">Load fragment</string>
    <string name="label_load_str_init">Connect your arduino device\nto continue.</string>
    <string name="label_load_str_pair">Testing connection…</string>
    <string name="label_load_str_fail">Something went wrong.\nClose the app and try again.</string>
    <string name="label_load_str_unsupp">Bluetooth is unsupported on your device.\nCannot continue.</string>
    <string name="label_load_str_disconn">Your device was disconnected. Try connecting it again.</string>
    <string name="label_load_str_fail_conn">Cannot connect to requested device.\n</string>
    <string name="label_load_str_timeout">Connection timed out.</string>

    <string name="toast_disconnect_msg">You have been disconnected from the device.\nClose the app to reconnect again.</string>

</resources>